--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
+    "moduleResolution": "node",
     "lib": ["es2015"],
     "strict": true,
     "declaration": true,
-    "outDir": "dist",
-    "sourceMap": true
+    "outDir": "src/build",
+    "sourceMap": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "./src/build/**/*"]
 }
